Fix text overflow on multiple pages

--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -340,6 +340,12 @@ main {
   text-decoration: none;
   color: #000000;
   font-weight: 700;
+
+  .group-header_name {
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+  }
 }
 
 .message-input {
@@ -485,6 +491,7 @@ main {
     overflow: hidden;
     text-overflow: ellipsis;
     max-width: 70%;
+    white-space: nowrap;
   }
 
   .last-update {
@@ -509,7 +516,7 @@ main {
   font-size: 1.1rem;
   
   .message_text {
-    word-break: break-all;
+    word-break: break-word;
   }
 
 
@@ -600,6 +607,8 @@ main {
   .group-name {
     font-size: 1.5rem;
     font-weight: 700;
+    text-align: center;
+    word-break: break-word;
   }
 
   .user_status {
@@ -709,6 +718,12 @@ main {
       text-decoration: none;
       color: #222222;
       overflow-x: clip;
+
+      .contact-name {
+        overflow: hidden;
+        text-overflow: ellipsis;
+        white-space: nowrap;
+      }
     }
   }
 }
